@@ -1,3 +1,8 @@
+2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am, configure.ac, getopt.h: Revert previous change.
+	Cygwin system getopt() is incompatible with the GNU version.
+
 2014-03-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am, configure.ac: Use Cygwin system getopt().
